# zmk

./: .gitignore
app/: west.yml
app/boards/arm/rpi_pico_w/: rpi_pico_w-pinctrl.dtsi  rpi_pico_w.dts  rpi_pico_w_defconfig
app/boards/arm/rpi_pico_w/doc/: index.rst
app/boards/shields/dactyl_manuform/: Kconfig.defconfig  Kconfig.shield  README.md  dactyl_manuform.dtsi  dactyl_manuform.keymap  dactyl_manuform.overlay  dactyl_manuform.zmk.yml  dactyl_manuform_left.overlay  dactyl_manuform_right.overlay
app/boards/shields/dactyl_manuform/boards/: rpi_pico.overlay
app/include/zmk/: ble.h
app/include/zmk/split/: service.h  split.h
app/include/zmk/split/serial/: common.h
app/src/: keymap.c
app/src/split/: CMakeLists.txt  Kconfig  split_listener.c
app/src/split/bluetooth/: central.c  service.c
app/src/split/serial/: CMakeLists.txt  Kconfig  central.c  common.c  service.c  split_listener.c
